--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,47 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: url(http://www.hdwallpaper.nu/wp-content/uploads/2016/02/california_wallpaper_20.jpg);
+  object-fit: cover;
+  background-color: rgb(175, 131, 0);
+  font-family: "Segoe UI", "Roboto", Tahoma;
+}
+
+header {
+  width: 800px;
+  height: 600px;
+  margin: 10px auto;
+  box-shadow: 0px 2px 5px rgba(0,0,0,.4);
+  box-shadow: 8px 10px 66px 1px rgba(0, 0, 0, 0.4);
+}
+
+nav {
+  position: relative;
+  background-color: rgba(229, 229, 229, 0.7);
+  float: left;
+  width: 250px;
+  height: 100%;
+}
+
+.navbar {
+  position: fixed;
+  background-color: #f8f8f8;
+  width: 534px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+
+.poster {
+  display: flex;
+  justify-content: center;
+}
+
+  
