--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ nav {
   height: 100%;
 }
 
-.navbar {
+/* .navbar {
   position: fixed;
   background-color: #f8f8f8;
   width: 534px;
@@ -36,6 +36,26 @@ nav {
   align-items: center;
   justify-content: center;
   z-index: 10;
+} */
+
+/* ul */
+.category {
+  display: flex;
+  flex-direction: column;
+}
+
+/* li */
+.list-category {
+  /* margin: 0 8px; */
+  list-style: none;
+  float: left;
+  margin-right: 15px;
+  opacity: 0;
+  transform: translateX(-150px);
+  transition: all .2s ease-in;
+  color: #999;
+  font-weight:400;
+  cursor: pointer;
 }
 
 
