--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,14 +46,14 @@ nav {
 
 /* li */
 .list-category {
-  /* margin: 0 8px; */
-  list-style: none;
+  margin: 0 8px; */
+  /* list-style: none;
   float: left;
-  margin-right: 15px;
-  opacity: 0;
-  transform: translateX(-150px);
-  transition: all .2s ease-in;
-  color: #999;
+  margin-right: 15px; */
+  /* opacity: 0; */
+  /* transform: translateX(-150px);
+  transition: all .2s ease-in; */
+  /* color: #999;
   font-weight:400;
   cursor: pointer;
 }
