--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,10 @@ header, main {
   justify-content: center;
 }
 
+main {
+  padding-bottom: 20px
+}
+
 /* header {
   width: 800px;
   height: 600px;
@@ -86,11 +90,12 @@ header, main {
   color: white;
 }
 
-.details-movie, .list-genres, .details-genre, .update-genre, .delete-genre, .container, .details-actor, .films-actor, .add-actor, .add-genre, .footer-cinema {
+.details-movie, .list-genres, .details-genre, .update-genre, .delete-genre, .list-actors, .details-actor, .films-actor, .add-actor, .add-genre, .footer-cinema {
   width: 100%;
   background-color: white;
   filter: opacity(0.9);
   padding: 20px 0;
+  border-radius: 6px;
 }
 
 
@@ -172,21 +177,45 @@ header, main {
   background-color: black;
 }
 
-td {
+/* Title column */
+#th-title-column {
   padding: 10px 0;
+  color: white;
 }
 
-td > a, th {
+.td-label-border {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/* Link to genre details */
+.td-label-border a {
+  display: block;
+  width: 160px;
+  padding: 10px 0;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.td-label-border a:hover {
+  background-color: white;
+  color: black;
+}
+
+/* update or delete */
+.td-update-delete a {
   color: white;
   text-decoration: none;
 }
 
-.td-a-border {
-  padding: 4px 15px;
-  border: 1px solid white;
-  border-radius: 6px;
-}
-
+/* ALL <a>  */
 .button-link {
   display: inline-block;
   padding: 10px 20px;
@@ -199,16 +228,24 @@ td > a, th {
 }
 
 /* Details Genre */
-/* .details-genre {
+.ul-list-movies {
+  padding: 10px 0;
+}
 
-} */
+.span-label-background-color {
+  padding: 0 5px;
+  background-color: black;
+  color: white;
+}
 
 /* Add Genre */
 .flex-col {
+  padding: 20px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 15px;
 }
 
 .text-success {
@@ -222,9 +259,31 @@ td > a, th {
 }
 
 /* UPDATE GENRE */
-/* .update-genre {
+.form-flex-column {
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
 
-} */
+.form-label-center, .form-input-center {
+  width: 20%;
+}
+
+.form-label-center {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.form-input-center {
+  font-size: 1.1em;
+}
+
+form > button {
+  font-size: 1.1em;
+}
 
 /* DELETE GENRE */
 /* .delete-genre {
@@ -239,23 +298,97 @@ h2 {
 }
 
 /* List Actors */
-/* .container {
+.list-actors {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
+}
 
-} */
+.list-actors > .button-link {
+  margin-top: 20px;
+}
+
+.actor-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  /* border: 1px solid #ccc; */
+}
+
+.div-list-actors {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.div-list-actors a {
+  text-decoration: none;
+  color: #000;
+  display: flex;
+  align-items: center;
+}
+
+.div-update-delete {
+  padding: 5px;
+}
+
+/*  */
+
+.list-divider {
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  /* gap: 10px; */
+}
 
 .list-divider > li {
   list-style: none;
 }
 
+/* Icon hidden by default */
+.actor-icon {
+  display: none;
+}
+
+.li-list-actors:hover .actor-icon {
+  display: inline-block;
+}
+
+.li-list-actors a {
+  display: block;
+  width: 190px;
+  padding: 10px 0;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.li-list-actors a:hover {
+  background-color: white;
+  color: black;
+}
+
 /* Details Actor */
-/* .details-actor {
+.details-actor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
 
-} */
+.informations-casting-actor p {
+  font-size: 1.2em;
+}
 
-/* Actor's Film */
-/* .films-actor {
-
-} */
+.informations-casting-actor a {
+  width: 120px;
+}
 
 /* Add Actor Form */
 /* .add-actor {
